--- a/SocialTravel/templates/SocialTravel/index.html
+++ b/SocialTravel/templates/SocialTravel/index.html
@@ -1,7 +1,7 @@
 {% extends "SocialTravel/base.html" %}
 {% load static %}
 
-{% block main %}
+{% block principal %}
 <main>
 
   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -9,7 +9,7 @@
       
         
           <div class="carousel-item active">
-              <img src="{% static "SocialTravel/assets/puente-corrientes-resistencia.jpeg" %}">
+              <img src="{% static 'SocialTravel/assets/puente-corrientes-resistencia.jpeg' %}">
             <div class="container">
               <div class="carousel-caption text-start">
                 <h1>Puente Gral. Belgrano</h1>
@@ -22,7 +22,7 @@
       
         
         <div class="carousel-item">
-          <img src="{% static "SocialTravel/assets/cataratas-del-iguazu-misiones.jpeg" %}">
+          <img src="{% static 'socialtravel/assets/cataratas-del-iguazu-misiones.jpeg' %}">
           <div class="container">
             <div class="carousel-caption">
               <h1>Cataratas del Iguazu</h1>
@@ -58,14 +58,14 @@
 
     
       <div class="col-lg-4">
-        <img src="{% static "SocialTravel/assets/puente-corrientes-resistencia.jpeg" %}" height="144" width="144">
+        <img src="{% static 'SocialTravel/assets/puente-corrientes-resistencia.jpeg' %}" height="144" width="144">
         <h2>El puente</h2>
         <p>vistas lindas del rio</p>
         <p><a class="btn btn-secondary" href="https://getbootstrap.com/docs/5.0/examples/carousel/#">View details »</a></p>
       </div><!-- /.col-lg-4 -->
     
       <div class="col-lg-4">
-        <img src="{% static "SocialTravel/assets/cataratas-del-iguazu-misiones.jpeg" %}" height="144" width="144">
+        <img src="{% static 'socialtravel/assets/cataratas-del-iguazu-misiones.jpeg' %}" height="144" width="144">
         <h2>Las cataratas</h2>
         <p>un destino imperdible</p>
         <p><a class="btn btn-secondary" href="https://getbootstrap.com/docs/5.0/examples/carousel/#">View details »</a></p>
@@ -86,7 +86,7 @@
       </div>
       <div class="col-md-5 order-md-1">
         
-          <img src="{% static "SocialTravel/assets/puente-corrientes-resistencia.jpeg" %}" height="400" width="400">
+          <img src="{% static 'SocialTravel/assets/puente-corrientes-resistencia.jpeg' %}" height="400" width="400">
         
 
       </div>
@@ -102,7 +102,7 @@
       </div>
       <div class="col-md-5 order-md-1">
         
-          <img src="{% static "SocialTravel/assets/cataratas-del-iguazu-misiones.jpeg" %}" height="400" width="400">
+          <img src="{% static 'SocialTravel/assets/cataratas-del-iguazu-misiones.jpeg' %}" height="400" width="400">
         
 
       </div>
