--- a/SocialTravel/templates/SocialTravel/base.html
+++ b/SocialTravel/templates/SocialTravel/base.html
@@ -60,15 +60,18 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url  'index' %}">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url "post-list" %}">Todos los Post</a>
+          </li>
           {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'post-list' %}">Mis Posts</a>
+              <a class="nav-link" href="{% url 'post-mine' %}">Mis Posts</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url "post-create" %}">Nuevo Post</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url "logout" %}">Salir</a>
+              <a class="nav-link" href="{% url "logout" %}"{{user.username}}> Salir</a>
             </li>
           {% else %}
           <li class="nav-item">
