--- a/SocialTravel/templates/SocialTravel/base.html
+++ b/SocialTravel/templates/SocialTravel/base.html
@@ -77,6 +77,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url "login" %}">ingresar</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url "singup" %}">Registrate</a>
+          </li>
           {% endif %}
           <!-- <li class="nav-item">
             <a class="nav-link disabled" href="https://getbootstrap.com/docs/5.0/examples/carousel/#" tabindex="-1" aria-disabled="true">Disabled</a>
